# WOLF

./: .dockerignore  .env  .gitignore  CODE_OF_CONDUCT.md  DEPENDENCY_VERSIONS.md  DEPLOY_TO_FLYIO.md  Dockerfile  QUICK_DEPLOY.md  README.md  START.md  docker-compose.yml  env.example  fly.toml  init_db.py  install_aiohttp.sh  pyproject.toml  rebuild.sh  replit  replit.md  requirements.txt  setup.sh  start_bot.sh  update_requirements.sh
src/: config.py  constants.py  example_config.py
src/cogs/esports/: __init__.py  errors.py  menus.py
src/cogs/esports/events/: scrims.py  slots.py  ssverify.py  tags.py  tourneys.py
src/cogs/events/: cmds.py  errors.py  interaction.py  logs.py  main.py  tasks.py  votes.py
src/cogs/mod/: __init__.py
src/cogs/premium/: __init__.py  expire.py  views.py
src/cogs/quomisc/: __init__.py  alerts.py  dev.py  views.py
src/cogs/reminder/: __init__.py
src/cogs/utility/: __init__.py
src/core/: Bot.py  Context.py  Help.py  __init__.py  _pages.py  cache.py  cooldown.py  decorators.py  embeds.py  views.py
src/models/: __init__.py
src/models/esports/: scrims.py  slotm.py  tagcheck.py  tourney.py
src/server/: __init__.py
src/server/templates/: response.html
src/sockets/: __init__.py
src/sockets/app/: app.py
src/sockets/events/: dashgate.py  guilds.py  premium.py  scrims.py  settings.py  tourney.py
src/sockets/schemas/: _scrim.py  _tourney.py
src/utils/: checks.py  default.py  emote.py  exceptions.py
tests/: check_pixel_colors.py  create_slotlist.py  img.py  img2.py  measure_boxes.py  slot_positions.json
(+39 files in other folders)
